fixed a weird bug with horizontal scrolling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ header {
 header h1 {
   margin: 0px;
   text-align: center;
-  font-size: 80px;
   font-family: 'Lexend Tera', sans-serif;
 }
 
@@ -192,7 +191,7 @@ footer {
   font-size: 30px;
 }
 
-.contact-me nav {
+.icon-bar{
   display: flex;
   justify-content: center;
 }
@@ -202,7 +201,7 @@ footer {
 }
 
 .icon-frame img {
-  width: 100%;
+  width: 90%;
 }
 
 .icon-frame img:hover {
@@ -225,7 +224,8 @@ footer {
 }
 
 .map iframe {
-  width: 600px;
+  
+  max-width: 100%;
   height: 400px;
 }
 
